[package]
name = "ipfs-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.151"
serde_derive = "1.0.151"
yaml-rust = "0.4.5"
libp2p = {version="0.50.0", features=[
    'identify',
     "dns",
     "noise",
     "tcp",
     "mplex",
     "yamux",
     "async-std"
]}
futures = "*"
async-std = "*"

[dependencies.confy]
features = ["yaml_conf"]
default-features = false